--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2"
   }
 }
- 
